--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>&AElig;yeverse</title>
+    <link id="style" rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body bgcolor="#1b1b1b">
+  <body>
       <div style="text-align: center;">
-        <p style="color: white; font-family: Arial, Helvetica, sans-serif;">&AElig;yeverse</p>
+        <p>&AElig;yeverse</p>
       </div>
   </body>
 </html>
