--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
       <div style="text-align: center;">
-        <p>&AElig;yeverse</p>
+        <h1>&AElig;yeverse</h1>
+        <p>Created by <a href="https://x.com/brownbear2929" target="_blank">brownbear29</a></p>
+        <p>Inspired by the <a href="https://eyeverse.world" target="_blank">Eyeverse</a></p>
       </div>
   </body>
 </html>
