Updated image gallery for better handling and accessibility

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <div style="text-align: center;">
         <h1>&AElig;yeverse</h1>
         
-        <p>Created by <a href="https://x.com/brownbear2929" target="_blank">brownbear29</a>. Inspired by the <a href="https://eyeverse.world" target="_blank">Eyeverse</a></p>
+        <p>Created by <a href="https://x.com/brownbear2929" target="_blank">brownbear29</a>. Inspired by the <a href="https://eyeverse.world" target="_blank">Eyeverse</a>.</p>
         
         <div class="image-grid" id="imageGrid"></div>
         <div class="lightbox" id="lightbox">
           <span class="close" id="closeLightbox">&times;</span>
-          <img id="lightboxImage" alt="Expanded view">
+          <img id="lightboxImage" alt="">
         </div>
         <script src="script.js"></script>
 
