Added social icons

--- a/index.html
+++ b/index.html
@@ -5,19 +5,30 @@
     <title>&AElig;yeverse</title>
     <link id="style" rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
   </head>
   <body>
       <div style="text-align: center;">
         <h1>&AElig;yeverse</h1>
         
         <p>Created by <a href="https://x.com/brownbear2929" target="_blank">brownbear29</a>. Inspired by the <a href="https://eyeverse.world" target="_blank">Eyeverse</a>.</p>
-        
+
         <div class="image-grid" id="imageGrid"></div>
         <div class="lightbox" id="lightbox">
           <span class="close" id="closeLightbox">&times;</span>
           <img id="lightboxImage" alt="">
         </div>
         <script src="script.js"></script>
+
+        <div class="social-icons"style="display: none;">
+          <a href="https://opensea.io" target="_blank" class="social-icon opensea" title="OpenSea">
+              <img src="opensea-logo.png" alt="OpenSea" class="opensea-icon">
+          </a>
+          <a href="https://magiceden.io" target="_blank" class="social-icon magiceden" title="MagicEden">
+              <img src="magiceden-logo.png" alt="MagicEden" class="magiceden-icon">
+          </a>
+        </div>
 
       </div>
   </body>
