--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&AElig;yeverse</title>
     <link id="style" rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
       <div style="text-align: center;">
@@ -20,6 +22,24 @@
           <img id="lightboxImage" alt="">
         </div>
         <script src="script.js"></script>
+
+        <noscript>
+          <div class="fallback-grid">
+            <a href="images/1.png">
+              <img src="images/1.png" alt="Image 1">
+            </a>
+            <a href="images/24.png">
+              <img src="images/24.png" alt="Image 24">
+            </a>
+            <a href="images/51.png">
+              <img src="images/51.png" alt="Image 51">
+            </a>
+            <a href="images/78.png">
+              <img src="images/78.png" alt="Image 78">
+            </a>
+          </div>
+          <p>A few examples, see more in the collection.</p>
+        </noscript>
 
         <div class="social-icons"style="display: none;">
           <a href="https://opensea.io" target="_blank" class="social-icon opensea" title="OpenSea">
